fix photo alignment

--- a/assets/css/app.scss
+++ b/assets/css/app.scss
@@ -6,7 +6,13 @@ body {
     color: whitesmoke;
 }
 
+.navbar-collapse {
+    text-align: right;
+}
 
+.main-content {
+    padding-top: 1em;
+}
 
 /* Category */
 @import "category";
