--- a/assets/css/gallery.scss
+++ b/assets/css/gallery.scss
@@ -1,11 +1,16 @@
 .gallery {
-    padding: 1em;
-    width: 23em;
-    height: 23em;
+    padding: 0;
+    margin-top: 1em;
+    text-align: -moz-center;
+    text-align: -webkit-center;
 }
 
 .gallery-photo {
-    width: 21em;
-    height: 21em;
+    width: 19rem;
+    height: 19rem;
     object-fit:cover;
+}
+
+.gallery-photo:hover {
+    cursor: pointer;
 }
